<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#F2081140">

    <ImageView
        android:id="@+id/image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/body"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/bmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi_calculator"
        android:textColor="#fff"
        android:textSize="45sp"

        app:layout_constraintBottom_toBottomOf="@id/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/bmi2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/body_mass_index"
        android:textColor="#fff"
        android:textSize="20sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bmi" />
    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_height="0dp"
        android:elevation="50dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image">

        <androidx.cardview.widget.CardView
            android:layout_marginTop="80dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EDE9E9"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/heightText"
                        android:text="@string/height"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:id="@+id/htEdit"
                        android:layout_width="match_parent"
                        android:inputType="numberDecimal"
                        android:layout_height="90dp"
                        android:textSize="25sp"
                        android:textColor="#000"
                        android:textAlignment="center"
                        android:layout_marginEnd="6dp"
                        android:hint="@string/m"
                        android:importantForAutofill="no" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/weightText"
                        android:text="@string/weight"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:id="@+id/wtEdit"
                        android:layout_width="match_parent"
                        android:inputType="numberDecimal"
                        android:layout_height="90dp"
                        android:textSize="25sp"
                        android:textColor="#000"
                        android:textAlignment="center"
                        android:layout_marginEnd="6dp"
                        android:hint="@string/kg"/>

                </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#A8B1E1">
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:elevation="10dp"
        android:id="@+id/btnCalculate"
        app:layout_constraintTop_toTopOf="@id/card1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:background="@drawable/btn_calculator"

        android:text="@string/calculate"
        android:textStyle="bold"
        android:textColor="#fff" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        app:layout_constraintTop_toBottomOf="@id/bmi2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/card1"
        android:layout_marginBottom="250dp"
        android:elevation="100dp"
        app:cardCornerRadius="100dp"
        android:layout_width="130dp"
        android:layout_height="100dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout2"
            android:background="#fff"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="250dp"
                android:src="@drawable/image2"
                app:layout_constraintBottom_toBottomOf="@id/layout2"
                app:layout_constraintEnd_toEndOf="@id/layout2"
                app:layout_constraintStart_toStartOf="@id/layout2"
                app:layout_constraintTop_toTopOf="@id/layout2"
                app:layout_constraintVertical_bias="0.5"
                android:importantForAccessibility="no" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>